# libcsptr

./: CMakeLists.txt  README.md
check/test/: array.c  misc.c  scalar.c  shared.c  test.c
example/: demo.c  demo1.c  demo2.c  demo3.c
include/: csptr_smart_ptr.c  csptr_smart_ptr.h
